# django-erp

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
attendance/: admin.py  apps.py  models.py
core/: admin.py  models.py
employees/: admin.py  apps.py  models.py
erp/: asgi.py  settings.py  urls.py  utils.py  views.py
evaluation/: models.py
organization/: admin.py  apps.py  models.py
payroll/: admin.py  models.py
payroll/fixtures/: allowance_types.json  deduction_types.json
payroll/services/: payroll_calculator.py
